# Home-Credit-Default-Risk-Project

./: .dockerignore  .gitignore  341.md  Dockerfile  README.md  pyproject.toml
ml_app/: main.py
ml_app/app_utils/: custom_transformers.py
notebooks/: credits.ipynb  files.ipynb  prev_application.ipynb
notebooks/model_params/: best_catb_params.pkl  best_catb_params_v2.pkl  best_hgb_params.pkl  best_hgb_params_v2.pkl  best_hgb_params_v4.pkl  best_lgbm_params.pkl  best_lgbm_params_v2.pkl  best_params_xgb.json  best_params_xgb_v3.json  best_xgb_params.pkl
utils/: plot_style.py  transformers.py  utils.py
